--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,14 +15,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.12.1
       - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8.12.1
       - name: install, lint, build
         run: |
           pnpm install --frozen-lockfile
@@ -30,3 +30,5 @@ jobs:
           pnpm build
         env:
           CI: true
+          # API_BASE_URL: ${{ secrets.API_BASE_URL }}
+          # API_KEY: ${{ secrets.API_KEY }}s
