--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.1",
   "author": "Christos Syrmakezis",
   "dependencies": {
+    "axios": "^1.6.2",
     "dotenv": "~16.3.1"
   },
   "devDependencies": {
