Add Husky configuration

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
     "prettier": "^3.1.1",
     "syncpack": "^11.2.1",
     "tsup": "^8.0.1",
@@ -51,6 +52,7 @@
     "concurretly": "concurrently",
     "format": "concurrently \"prettier --write '**/*.{js,ts,tsx,json,md}'\" \"pnpm syncpack format\"",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "prepare": "husky install",
     "reset": "pnpm clean && pnpm build",
     "start": "pnpm start:esm",
     "start:cjs": "pnpm build:cjs && node dist/index.js",
