--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "ts-starter",
-  "description": "A dead-simple TypeScript template",
+  "description": "Just a clone-able TypeScript workspace for simple projects",
   "version": "1.1.1",
   "author": "Christos Syrmakezis",
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "~1.6.2",
+    "chalk": "~5.3.0",
     "dotenv": "~16.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "concurrently": "^8.2.2",
