--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "dotenv": "~16.3.1"
   },
   "devDependencies": {
+    "@openapi-codegen/cli": "^2.0.0",
+    "@openapi-codegen/typescript": "^8.0.0",
     "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
+    "openapi-typescript": "^6.7.3",
     "prettier": "^3.1.1",
     "syncpack": "^11.2.1",
     "tsup": "^8.0.1",
@@ -46,13 +50,15 @@
   "module": "dist/index.mjs",
   "packageManager": "pnpm@8.12.1",
   "scripts": {
-    "build": "concurrently \"pnpm build:cjs\" \"pnpm build:esm\"",
+    "build": "tsup --format=cjs,esm",
     "build:cjs": "tsup --format cjs",
     "build:esm": "tsup --format esm",
     "clean": "rm -rf dist node_modules *lock* && pnpm i",
     "concurretly": "concurrently",
     "format": "concurrently \"prettier --write '**/*.{js,ts,tsx,json,md}'\" \"pnpm syncpack format\"",
+    "gen:specs": "openapi-codegen gen $API_NAME",
     "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "openapi-codegen": "openapi-codegen",
     "prepare": "husky install",
     "reset": "pnpm clean && pnpm build",
     "start": "pnpm start:esm",
