--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,10 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -21,6 +24,36 @@
     "no-undef": "warn",
     "prefer-const": "warn",
     "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "import/newline-after-import": ["warn", { "count": 1 }],
+    "import/no-useless-path-segments": [
+      "warn",
+      {
+        "noUselessIndex": true
+      }
+    ],
+    "import/order": [
+      "warn",
+      {
+        "groups": ["builtin", "external", "internal", "object", "parent", "sibling", "index"],
+        "pathGroups": [
+          {
+            "pattern": "*",
+            "group": "external",
+            "position": "before"
+          },
+          {
+            "pattern": "@/{api,env,logger}",
+            "group": "internal",
+            "position": "after"
+          }
+        ],
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        },
+        "newlines-between": "always"
+      }
+    ]
   }
 }
