--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,9 @@
     "prefer-const": "warn",
     "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
     "@typescript-eslint/no-explicit-any": "off",
+    "import/no-named-as-default-member": "off",
     "import/newline-after-import": ["warn", { "count": 1 }],
+    "import/no-unresolved": "off",
     "import/no-useless-path-segments": [
       "warn",
       {
