--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "1.1.1",
   "author": "Christos Syrmakezis",
   "dependencies": {
+    "@ts-rest/core": "^3.30.5",
     "axios": "~1.6.2",
     "chalk": "~5.3.0",
-    "dotenv": "~16.3.1"
+    "dotenv": "~16.3.1",
+    "znv": "^0.4.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@openapi-codegen/cli": "^2.0.0",
