--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 API_BASE_URL=https://jsonplaceholder.typicode.com
 API_CUSTOM_HEADERS=Authorization:Bearer SOME_API_KEY, X-Api-Header:SomeApiValue, X-Another-Header:AnotherValue
+API_NAME=elorus
+SYMLINK_WATCH_MODE=false
+NPM_CI_TOKEN_TS_STARTER=YOUR_NPM_CI_TOKEN
