--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "files": [
     "dist",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "package.json"
   ],
   "keywords": [
     "dotenv",
